# rusty-potato-bot

./: .gitignore  Cargo.toml
src/: main.rs
