[package]
name = "rusty-potato-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Discord
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Twitch
twitch_api2 = "0.5"
twitch_oauth2 = "0.6"
twitchchat = { version = "0.14", features = ["async"] }

# Commands
ferris-says = "0.2"
